--- a/views/layout.tt
+++ b/views/layout.tt
@@ -368,11 +368,28 @@
     </div>
     <div class="field-options person">
         <div class="form-group">
-            <label for="default_to_login">Default value:</label>
             <div class="checkbox">
                 <label>
                     <input id="default_to_login" type="checkbox" name="default_to_login" [% IF column.default_to_login %]checked[% END %]>Default new values to current logged-in user
                 </label>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="checkbox">
+                <label>
+                    <input id="notify_on_selection" type="checkbox" name="notify_on_selection" [% IF column.notify_on_selection %]checked[% END %]>Send a message to the user when they are selected in this field
+                </label>
+            </div>
+        </div>
+        <div id="notify-options">
+            <div class="form-group">
+                <label for="notify_on_selection_subject">You have been selected in a record</label>
+                <input id="notify_on_selection_subject" class="form-control" type="text" name="notify_on_selection_subject"
+                    value="[% column.notify_on_selection_subject OR 'You have been assigned a record' | html %]">
+            </div>
+            <div class="form-group">
+                <label for="notify_on_selection_message">Message to send to user: [% whats_this('helpnotify') %]</label>
+                <textarea class="form-control" id="notify_on_selection_message" name="notify_on_selection_message" rows="10">[% column.notify_on_selection_message OR 'You have been selected in the record $_link' | html %]</textarea>
             </div>
         </div>
     </div>
