--- a/views/snippets/data_table_inner.tt
+++ b/views/snippets/data_table_inner.tt
@@ -44,7 +44,7 @@
                                 [% END %]
                                 <ul class="column-filter__values" id="column-filter__values_[% col.id %]" aria-label="Filters"></ul>
                                 <div class="column-filter__buttons">
-                                    <button class="column-filter__button column-filter__submit btn btn-xs btn-default" type="submit">Go</a>
+                                    <button class="column-filter__button column-filter__submit btn btn-xs btn-default" type="submit">Go</button>
                                 </div>
                             </div>
                             [% IF col.helptext %]
