--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -133,7 +133,15 @@
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         [% IF hostlocal %]
-            <script src="[% url.js %]/jquery-1.12.4.min.js"></script>
+            [%# Old versions of JQuery do not seem to work with CSP, but new
+            versions do not work with IE8. Given that IE8 does not support CSP,
+            use old version for it but newer version for everything else %]
+            <!--[if lt IE 9]>
+                <script src="[% url.js %]/jquery-1.12.4.js"></script>
+            <![endif]-->
+            <![if gte IE 9]>
+                <script src="[% url.js %]/jquery-3.5.1.min.js"></script>
+            <![endif]>
             <script src="[% url.js %]/jquery-ui.min.js"></script>
             <script src="[% url.js %]/bootstrap.min.js"></script>
             <script src="[% url.js %]/tooltip.min.js"></script>
@@ -142,6 +150,12 @@
             <script src='[% url.js %]/vendor/jquery.fileupload.js'></script>
         [% ELSE %]
             <script src="[% scheme %]://code.jquery.com/jquery-1.12.4.min.js"></script>
+            <!--[if lt IE 9]>
+                <script src="[% scheme %]://code.jquery.com/jquery-1.12.4.min.js"></script>
+            <![endif]-->
+            <![if gte IE 9]>
+                <script src="[% scheme %]://code.jquery.com/jquery-3.5.1.min.js"></script>
+            <![endif]>
             <script src="[% scheme %]://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
             <script src="[% scheme %]://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
             <script src="[% scheme %]://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/tooltip.min.js"></script>
