Revert "Fix shared view checkbox for group"
I'm not sure why this was added - something to do with grouped views not
being correctly retained on save. However, this is the wrong fix, as it
means that if a view was shared once upon a time and is no longer, that
it then becomes shared when edited.

This reverts commit de6d8ca66b2ad3b5fcf4a1769df13d45aec7cd31.

--- a/views/view.tt
+++ b/views/view.tt
@@ -18,7 +18,7 @@
             [% IF layout.user_can("layout") OR layout.user_can("view_group") %]
                 <div class="checkbox">
                     <label>
-                        <input id="global" type="checkbox" name="global" [% IF view_edit.global OR view_edit.group_id %]checked[% END %]>Shared view
+                        <input id="global" type="checkbox" name="global" [% IF view_edit.global %]checked[% END %]>Shared view
                     </label>
                 </div>
                 <div id="group_id_div">
