Allow user department, team and org in filters

--- a/views/view.tt
+++ b/views/view.tt
@@ -90,8 +90,10 @@
                 <dd>
                     Use filters to select the records you want to include in
                     the view. Dates in your filters must be in the format [% config.dateformat %]
-                    or 'CURDATE' for current date.  [CURUSER] can be used to specify the user that
-                    is logged in when the view is used.
+                    or 'CURDATE' for current date. The current user using the view can also be substituted:
+                    [CURUSER] can be used to specify the user; [CURUSER.ORG] can be used to specify
+                    the user's organisation; [CURUSER.DEPT] can be used to specify the user's department;
+                    [CURUSER.TEAM] can be used to specify the user's team.
                 </dd>
             </dl>
 
