Replace bootstrap modal closing for helptext modal

--- a/views/edit.tt
+++ b/views/edit.tt
@@ -300,7 +300,7 @@
             <div class="modal-body">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button id="helptext_modal_close" type="button" class="btn btn-default">Close</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
